tests/baselines/reference/optionalParamReferencingOtherParams3.errors.txt
optionalParamReferencingOtherParams3.ts(1,20): error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.


==== optionalParamReferencingOtherParams3.ts (1 errors) ====
    function right(a = b, b = a) {
                       ~
!!! error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
        a;
        b;
    }